Reimplementati metodi per gestione crittografia password per compatibilit? con Java 7.